k8s/manifests-v2/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-volume
      containers:
        - image: mongo
          name: mongodb
          ports:
            - name: http
              containerPort: 27017
      restartPolicy: Always
