k8s/manifests-v2/userservicedb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservicedb
  labels:
    app: userservicedb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservicedb
  template:
    metadata:
      labels:
        app: userservicedb
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_USER
              value: postgres
          image: postgres:14.5-alpine
          name: userservicedb
          ports:
            - name: http
              containerPort: 5432
      restartPolicy: Always
