k8s/manifests-v2/chat-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chat-service
  name: chat-service
spec:
  selector:
    app: chat-service
  type: ClusterIP
  ports:
    - name: http
      port: 8003
      # protocol: TCP
      targetPort: http
