k8s/manifests-v2/matching-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: matching-service
  name: matching-service
spec:
  selector:
    app: matching-service
  type: ClusterIP
  ports:
    - name: http
      port: 8001
      # protocol: TCP
      targetPort: http
