k8s/manifests-v2/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
      app: mongodb
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - name: http
      port: 27017
      targetPort: 27017
      protocol: TCP
