k8s/manifests-v2/question-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: question-service
  name: question-service
spec:
  selector:
    app: question-service
  type: ClusterIP
  ports:
    - name: http
      port: 8002
      # protocol: TCP
      targetPort: http
