k8s/manifests-v2/questionservicedb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
      app: questionservicedb
  name: questionservicedb
spec:
  selector:
    app: questionservicedb
  ports:
    - name: http
      port: 5432
      targetPort: 5432
      protocol: TCP
