k8s/manifests-v2/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-service
  name: user-service
spec:
  selector:
    app: user-service
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      # protocol: TCP
      targetPort: http
