k8s/manifests-v2/userservicedb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
      app: userservicedb
  name: userservicedb
spec:
  selector:
    app: userservicedb
  ports:
    - name: http
      port: 5432
      targetPort: 5432
      protocol: TCP
